FX class